# IMAR-C

./: .gitignore  README.md  huilong
actmngt/: #fail.c#  #main.cpp#  .gitignore  Makefile  README  a.out  actmngt  compute.sh  denseTrack.cpp  main.cpp  naosvm.cpp  test.cpp
actmngt/bdd/: 11.stip.bow.scaled  concatenate.bow.model  concatenate.bow.scaled  concatenate.bow.scaled.model  out  out2  out3  scale  svm-predict  svm-scale  svm-train
cr/: imar.blg  imar.tex
docs/: Doxyfile
docs/html/: _dense_track_8cpp_source.html  _dense_track_8h_source.html  _ipl_image_pyramid_8cpp_source.html  _ipl_image_wrapper_8cpp_source.html  _k_ctree_8cpp_source.html  _k_cutil_8cpp_source.html  _k_m___a_n_n_8cpp_source.html  _k_mcenters_8cpp_source.html  _k_mdata_8cpp_source.html  _k_means_8cpp_source.html  _k_mfilter_centers_8cpp_source.html  _k_mlocal_8cpp_source.html  annotated.html  (+225 more)
include/: denseTrack.h  imbdd.h  imconfig.h  integration.h  matrixCalculation.h  naodensetrack.h  naokmeans.h  naomngt.h  naosvm.h  numericFunctions.h  tactil.h
integration/: Makefile  main  main.c  naodensetrack.h  naokmeans.cpp  naokmeans.h  svm.model  training.means
modules/densetrack/: CMakeLists.txt  Point.h  functions.h  main.cpp
modules/densetrack/build-fabtc/: Makefile
modules/integration/: Box.h  CMakeLists.txt  IplImageWrapper.cpp  IplImageWrapper.h  Size.h  main.cpp  naokmeans.h  naosvm.cpp  naosvm.h
modules/integration/build-fabtc/: Makefile
modules/libintegration/: CMakeLists.txt  integration.cpp  main.cpp  nao@157.159.124.158  naopredict.cpp  naopredict.h  tactil.cpp  tactil.h
modules/libintegration/build-fabtc/: Makefile
modules/libintegration/testinclude/: IplImagePyramid.h  naokmeans.h  naomngt.h  tactil.h
python/: goToPosture.py  listLedsGroups.py
src/: #naodensetrack.cpp#  #naokmeans.cpp#  #naomngt.cpp#  imbdd.cpp  imconfig.c  imconfig.cpp  imstatistics.c  integration.cpp  matrixCalculation.c  naodensetrack.cpp  naodensetrack.cpp.save  naokmeans.cpp  naomngt.cpp  naosvm.cpp  tactil.cpp
test/: #main.cpp#  Makefile  main.cpp  naokmeans.cpp  naomngt.cpp
tests/: #main.cpp#  Makefile  fileExists  main.cpp
(+289 files in other folders)
